Fix collapsing issue with the URL input suggestion container

--- a/packages/block-editor/src/components/url-input/style.scss
+++ b/packages/block-editor/src/components/url-input/style.scss
@@ -71,7 +71,8 @@ $input-size: 300px;
 .block-editor-url-input .components-spinner {
 	display: none;
 	@include break-small() {
-		display: inherit;
+		display: flex;
+		flex-direction: column;
 	}
 }
 
